Clarified exercise Account.

--- a/_includes/week04/exercise/003.md
+++ b/_includes/week04/exercise/003.md
@@ -24,7 +24,7 @@
 >>
 >> **Note**: there is a different exercise template for each of the sub-exercises. For this exercise use the template 001.1
 >>
->> Create a program that creates an account with the balance of 100.0, deposits 20.0 and prints the account. Note! do all the steps described in the exercise exactly in the described order!
+>> Complete code in the class Accounts so that you have a program that creates an account with the balance of 100.0, deposits 20.0 and prints the account. Note! do all the steps described in the exercise exactly in the described order!
 >>
 >> #### Exercise 7-1.2: Your first money transfer
 >>
