Beschrijving exercise 9-4.1 aangepast.

--- a/_includes/week10/exercise/004_new.md
+++ b/_includes/week10/exercise/004_new.md
@@ -5,13 +5,13 @@
 >>
 >> #### 9-4.1 Account class
 >>
->> An account stores the name of the type of the account (Savings or Deposit), and have an amount of money on them. We will model these as attributes. Make an abstract class `Account` with the following properties
+>> An account stores the name of the type of the account (Savings or Deposit), and the amount of money on it. We will model these as attributes. Make an abstract class `Account` with the following properties
 >>
 >> - attribute `String name`
 >> - attribute `double amount`
->> - Constructor with parameters `String name` and `double initialAmount`. The name attribute gets set to `name + " (initial " + amount + ")"`
+>> - Constructor with parameters `String name` and `double initialAmount`. The name attribute gets set to `name (initialAmount)`, where `name` and `initialAmount` are the corresponding parameter values.
 >> - getter and setter for `amount`. Make sure the setter rounds the amount to 2 decimals
->> - toString that prints `name - amount`
+>> - toString that returns `name - amount`, where `name` and `amount` are the corresponding attribute values.
 >> - abstract `void calculateNextYear()`
 >> 
 >> #### 9-4.2 Savings and Deposit account
