--- a/_includes/week10/exercise/004_new.md
+++ b/_includes/week10/exercise/004_new.md
@@ -9,9 +9,9 @@
 >>
 >> - attribute `String name`
 >> - attribute `double amount`
->> - Constructor with parameters `String name` and `double initialAmount`. The name attribute gets set to `name (initialAmount)`, where `name` and `initialAmount` are the corresponding parameter values.
+>> - Constructor with parameters `String name` and `double initialAmount`. The name attribute gets set to `"name (initialAmount)"`, where `name` and `initialAmount` are the corresponding parameter values.
 >> - getter and setter for `amount`. Make sure the setter rounds the amount to 2 decimals
->> - toString that returns `name - amount`, where `name` and `amount` are the corresponding attribute values.
+>> - toString that returns `"name - amount"`, where `name` and `amount` are the corresponding attribute values.
 >> - abstract `void calculateNextYear()`
 >> 
 >> #### 9-4.2 Savings and Deposit account
